# kommit

./: .gitignore  CMakeLists.txt  README.md  git.h  main.cpp
